# claude-marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
plugins/development/jb-marketplace/: .mcp.json  README.md
plugins/development/jb-marketplace/.claude-plugin/: plugin.json
plugins/development/jb-marketplace/servers/jb-marketplace-mcp/: jb_marketplace_mcp.py  pyproject.toml  run.sh
plugins/development/jb-marketplace/skills/jb-marketplace/: SKILL.md
plugins/frontend/react-flow/: .gitignore  .mcp.json  README.md
plugins/frontend/react-flow/.claude-plugin/: plugin.json
plugins/frontend/react-flow/servers/react-flow-mcp/: fetch_docs.py  pyproject.toml  react_flow_mcp.py  run.sh
plugins/frontend/react-flow/servers/react-flow-mcp/data/: docs.json
plugins/frontend/react-flow/skills/react-flow/: SKILL.md
plugins/general/discord/: .mcp.json  README.md
plugins/general/discord/.claude-plugin/: plugin.json
plugins/general/discord/servers/discord-mcp/: discord_mcp.py  pyproject.toml  run.sh
plugins/general/discord/skills/discord/: SKILL.md
plugins/general/google-image/: .mcp.json  README.md
plugins/general/google-image/.claude-plugin/: plugin.json
plugins/general/google-image/servers/google-image-mcp/: google_image_mcp.py  pyproject.toml  run.sh
plugins/general/google-image/skills/google-image/: SKILL.md
plugins/general/google-research/: .mcp.json  README.md
plugins/general/google-research/.claude-plugin/: plugin.json
plugins/general/google-research/servers/google-research-mcp/: google_research_mcp.py  pyproject.toml  run.sh
plugins/general/google-research/skills/google-research/: SKILL.md
plugins/general/prompt-builder/: README.md
plugins/general/prompt-builder/.claude-plugin/: plugin.json
plugins/general/prompt-builder/skills/prompt-builder/: SKILL.md
plugins/general/prompt-builder/skills/prompt-builder/references/: patterns.md  templates.md
plugins/general/reddit/: .mcp.json  README.md
plugins/general/reddit/.claude-plugin/: plugin.json
plugins/general/reddit/servers/reddit-mcp/: pyproject.toml  reddit_mcp.py  run.sh
plugins/general/reddit/skills/reddit/: SKILL.md
